--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 27
+    dataBinding { enabled = true }
     defaultConfig {
         applicationId "com.snindustries.project.udacity.popularmovies"
         minSdkVersion 20
@@ -23,11 +24,20 @@ android {
 }
 
 dependencies {
+    def appCompat ="27.1.1"
+
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:27.1.0'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
-    implementation 'com.squareup.picasso:picasso:2.71828'
-    implementation 'com.android.support:recyclerview-v7:27.1.0'
-    implementation 'com.squareup.okhttp3:okhttp:3.11.0'
-    implementation 'com.android.support:design:27.1.1'
+    implementation "com.android.support:appcompat-v7:$appCompat"
+    implementation "com.android.support.constraint:constraint-layout:1.1.3"
+    implementation "com.squareup.picasso:picasso:2.71828"
+    implementation "com.android.support:recyclerview-v7:$appCompat"
+    implementation "com.squareup.okhttp3:okhttp:3.11.0"
+    implementation "com.android.support:design:$appCompat"
+    implementation "com.squareup.retrofit2:retrofit:2.4.0"
+
+    // Room components
+    def roomVersion = "1.1.1"
+    implementation "android.arch.persistence.room:runtime:$roomVersion"
+    annotationProcessor "android.arch.persistence.room:compiler:$roomVersion"
+    androidTestImplementation "android.arch.persistence.room:testing:$roomVersion"
 }
