Added Paging Library Added Retrofit Added Gson Added Android Arch View Model Added Room

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,15 +29,33 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "com.android.support:appcompat-v7:$appCompat"
     implementation "com.android.support.constraint:constraint-layout:1.1.3"
-    implementation "com.squareup.picasso:picasso:2.71828"
     implementation "com.android.support:recyclerview-v7:$appCompat"
-    implementation "com.squareup.okhttp3:okhttp:3.11.0"
     implementation "com.android.support:design:$appCompat"
-    implementation "com.squareup.retrofit2:retrofit:2.4.0"
 
-    // Room components
-    def roomVersion = "1.1.1"
-    implementation "android.arch.persistence.room:runtime:$roomVersion"
-    annotationProcessor "android.arch.persistence.room:compiler:$roomVersion"
-    androidTestImplementation "android.arch.persistence.room:testing:$roomVersion"
+    // Image loading library
+    implementation "com.squareup.picasso:picasso:2.71828"
+    implementation "com.squareup.okhttp3:okhttp:3.11.0"
+
+    // Retrofit
+    implementation "com.squareup.retrofit2:retrofit:2.4.0"
+    implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.9.1'
+
+    //Gson for Retrofit
+    implementation 'com.google.code.gson:gson:2.8.5'
+
+    // Android Architecture Components
+    def arch_version = "1.1.1"
+
+    //adding view model
+    implementation "android.arch.lifecycle:extensions:$arch_version"
+    implementation "android.arch.lifecycle:viewmodel:$arch_version"
+
+    //adding paging
+    implementation "android.arch.paging:runtime:1.0.1"
+
+    //Room
+    implementation "android.arch.persistence.room:runtime:$arch_version"
+    annotationProcessor "android.arch.persistence.room:compiler:$arch_version"
+    androidTestImplementation "android.arch.persistence.room:testing:$arch_version"
 }
