--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,10 +21,14 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    compileOptions {
+        sourceCompatibility = '1.8'
+        targetCompatibility = '1.8'
+    }
 }
 
 dependencies {
-    def appCompat ="27.1.1"
+    def appCompat = "27.1.1"
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "com.android.support:appcompat-v7:$appCompat"
@@ -58,4 +62,9 @@ dependencies {
     implementation "android.arch.persistence.room:runtime:$arch_version"
     annotationProcessor "android.arch.persistence.room:compiler:$arch_version"
     androidTestImplementation "android.arch.persistence.room:testing:$arch_version"
+
+    //Database Viewer Library
+    //TODO: display library license info
+    debugImplementation 'com.amitshekhar.android:debug-db:1.0.4'
+
 }
